--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ a{
     position: absolute;
     top: 0;
     left: 100%;
-    transition: .3s linear;
+    transition: transform .3s linear;
 }
 
 .topmenu li:hover > .submenu{
